# Scroller

./: CMakeLists.txt  NOTES.md  README.md  prj.conf  west.yml
boards/: nrf52840dk_nrf52840.overlay
configuration/common/: sensor_manager_def.h  settings_loader_def.h
src/: hid_extensions.h  main.c  scroller.h  scroller_ble.c  scroller_ble.h  scroller_config.h  scroller_hog.c  scroller_hog.h  scroller_sensor.c  scroller_sensor.h  scroller_usb.c  scroller_usb.h
src/events/: CMakeLists.txt  usb_state_event.c  usb_state_event.h
src/modules/: CMakeLists.txt  scroller_config.h  scroller_idle_waker.c  scroller_scroll_calculate.c  scroller_scroll_calculate.h  scroller_usb.c
